[TSPLibImporter] support import of a tour in a row
Add test cases to cover a tour defined in a row.